# gostrocks

./: LICENSE  Makefile  README.md  build_commands.txt  pyproject.toml  requirements.txt  setup.py
data/RAW/: gadm2_HoA_SoL.csv
docs/: Makefile  commands.rst  conf.py  index.rst  make.bat
notebooks/: AWS_Summarize.ipynb  CREAT_FATHOM_VRTs.ipynb  TUT_DECAT_B_GeocodingExamples.ipynb  TUT_GeoBoundaries.ipynb  Untitled.ipynb  ZON_DECAT_B_ZonalStatsNTLHarmonized.ipynb  ZON_DECAT_NTL_from_AWS.ipynb
notebooks/FATHOM/: Extract_flood_tiles.ipynb  Generate_footprints.ipynb  Transfer_Data_AWS.ipynb  Vizualize_Flood_types.ipynb  generate_fathom_vrts.ipynb
notebooks/metadata/: 01_NADA_geospatial_metadata_template.ipynb  02_CPF_DRC_data_exploration.ipynb  03_CPF_DRC_metadata.ipynb  04_Novel_Urbanization_MLI_data_exploration.ipynb  05_Novel_Urbanization_MLI_metadata.ipynb  META_DECAT_ExploringMetadataGeneration.ipynb
src/GOSTRocks/: dataMisc.py  ghslMisc.py  mapMisc.py  metadataMisc.py  metadataMisc.txt  misc.py  ntlMisc.py  osmMisc.py  rasterMisc.py
