[project]
name = "GOSTRocks"
version = "0.1.0"
authors = [
  { name="Benjamin P. Stewart", email="ben.gis.stewart@gmail.com" },
]
description = "Miscellaneous geospatial functions concerning vector, raster, and network analysis"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [        
        'rasterio',
        'geopandas',
        'pandas',
        'numexpr > 2.6.8',
        'numpy',
        'pyproj',
        'ogr',
        'seaborn',
        'boto3',
        'botocore',
        'contextily',
        'matplotlib',
        'tqdm',
        'xarray',
        'osmnx',
        'affine',
        'PyOpenSSL >= 23.2'        
        ]

[project.urls]
"Homepage" = "https://github.com/bpstewar/gostrocks"
"Bug Tracker" = "https://github.com/bpstewar/gostrocks/issues"